# joey

./: .gitignore  2021.parquet  README.md  Untitled.ipynb  bench-sqlite-complex.py  bench-sqlite.py  bench.cpp  cep.py  cep_executors.py  interval_nfa_cep.py  interval_nfa_cep_c.py  interval_nfa_cep_polars.py  interval_nfa_cep_sqlite.py  interval_vector_cep.py  nfa_cep.py  nfa_cep_duck.py  pre_build_script.sh  pyproject.toml  repair.sh  requirements.txt  set_env.sh  setup.py  technical_indicators.py  utils.py
.github/workflows/: deploy.yml
data/: 2021.parquet
deprecated/: baseline_nfa_cep.py  interval_nfa_cep.bak  interval_nfa_cep_polars.py  interval_vector_cep_polars.py  make_combined_minutely.py  nfa_cep.bak  nfa_cep_duck.py  nfa_cep_polars.py
examples/: cep.py  technical_indicators.py
frontend/: Dockerfile  README.md  example.ipynb
microbenchmarks/: .gitignore  bench  bench-duckdb-complex.py  bench-duckdb.py  bench-polars-complex.py  bench-polars.py  bench-sqlite-complex.py  bench-sqlite-cpp.out  bench-sqlite-python.out  bench-sqlite.cpp  bench-sqlite.py  compile.sh  plot_micro_bench.py  run_benchmarks.sh  velox_benchmark.cpp
pyjoey/: __init__.py  gui.py  interval_nfa_cep.py  interval_nfa_cep_c.py  interval_vector_cep.py  interval_vector_cep_c.py  nfa_cep.py  utils.py
reference/: reference.sql  trino.py
src/: Makefile  common.h  compile.sh  deprecated.h  example.cpp  interval_dfs_cep.cpp  interval_nfa_cep.cpp  interval_vector_cep.bak  interval_vector_cep.cpp  nfa_cep.cpp
